# human-utils

./: .prettierrc  Cargo.toml  README.md
src/: lazy_path.rs  lib.rs
tests/: del_basic.rs  del_dry_run.rs  del_force.rs  del_multiple.rs  del_no_existing.rs  del_silent.rs  mov_basic.rs  mov_dry_run.rs  mov_force.rs  mov_missing_source.rs  mov_noop.rs  mov_options.rs  mov_replace_existing.rs  mov_requires_two_arguments.rs  mov_silent.rs  nam_basic.rs  nam_dry_run.rs  nam_force.rs  nam_missing_source.rs  nam_noop.rs  nam_replace_existing.rs  nam_requires_two_arguments.rs  nam_silent.rs  nef_basic.rs  nef_content.rs  new_basic.rs  new_conflicting_arguments.rs  new_content.rs  new_content_overwrite.rs  new_directory_option.rs  new_dry_run.rs  new_file_option.rs  new_multiple.rs  new_overwrite.rs  new_recursive.rs  new_silent.rs  rem_basic.rs  rem_dry_run.rs  rem_force.rs  rem_multiple.rs  (+9 more)
tests/utils/: mod.rs
