[package]
name = "human-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.1"
clap = { version = "4.0.32", features = ["derive", "unicode", "wrap_help"] }
colored = "2.0.0"

[dev-dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
iter-read = "0.3.1"
regex = { version = "1.7.0", features = ["std"], default-features = false }
rstest = "0.16.0"
tempfile = "3.3.0"
